// To generate the go file, run:
// protoc -I ./ *.proto --go_out=plugins=grpc:./
// OR from project root folder:
// protoc -I api/ **/*.proto --go_out=plugins=grpc:api/

syntax = "proto3";

package service;

// The service definition
service Service {
  rpc Start (StartRequest) returns (StartReply) {}
  rpc Stop (StopRequest) returns (StopReply) {}
  rpc Emit (EmitRequest) returns (EmitReply) {}
  rpc Subscribe (SubscribeRequest) returns (stream SubscribeReply) {}
}

// Start Request
message StartRequest {
}

// Start Reply
message StartReply {
  string error = 1;
}

// Stop Request
message StopRequest {
}

// Stop Reply
message StopReply {
  string error = 1;
}

// Emit Request
message EmitRequest {
  enum Type {
    SYSTEM = 0;
    EVENT = 1;
    TASK_OUTPUT = 2;
  }
  Type type = 1;
  string id = 2;
  string data = 3;
}

// Emit Reply
message EmitReply {
  string error = 1;
}

// Subscribe Request
message SubscribeRequest {
}

// Subscribe Reply
message SubscribeReply {
  enum Type {
    SYSTEM = 0;
    TASK = 1;
  }
  Type type = 1;
  string id = 2;
  string data = 3;
}
